pkginclude_HEADERS = \
    Exceptions.h MathUtils.h \
    AnalysisObject.h Bin.h \
    Histo1D.h HistoBin.h  \
    Profile1D.h ProfileBin.h \
    Scatter2D.h Point2D.h \
    Scatter.h Point.h \
    Writer.h WriterAIDA.h WriterYODA.h

noinst_HEADERS = \
	indexedset.h \
	sortedvector.h \
	nvector.h \
	WriterMethods.icc
