pkginclude_HEADERS = \
    Exceptions.h  \
    AnalysisObject.h \
	Bin.h \
    Histo1D.h HistoBin.h  \
    Profile1D.h ProfileBin.h \
    Scatter2D.h Point2D.h \
    Scatter.h Point.h \
    Writer.h WriterAIDA.h WriterYODA.h

nobase_pkginclude_HEADERS = \
	WriterMethods.icc
	Utils/MathUtils.h
	Utils/sortedvector.h \
	Utils/nvector.h \
	Config/YodaConfig.h \
	Config/BuildConfig.h
