EXTRA_DIST = \
    AnalysisObject.pyx \
    Axis1D_BIN1D_DBN.pyx \
    Axis2D_BIN2D_DBN.pyx \
    Bin.pyx \
    Bin1D_DBN.pyx \
    Bin2D_DBN.pyx \
    Dbn1D.pyx \
    Dbn2D.pyx \
    Dbn3D.pyx \
    Errors.pyx \
    Histo1D.pyx \
    Histo2D.pyx \
    HistoBin1D.pyx \
    HistoBin2D.pyx \
    IO.pyx \
    Point2D.pyx \
    Point3D.pyx \
    Profile1D.pyx \
    Profile2D.pyx \
    ProfileBin1D.pyx \
    ProfileBin2D.pyx \
    Scatter2D.pyx

clean-local:
	@rm -rf generated/*
